src/test/ui/consts/const-eval/const_let.stderr
error[E0493]: destructor of `FakeNeedsDrop` cannot be evaluated at compile-time
  --> $DIR/const_let.rs:16:32
   |
LL | const Y: FakeNeedsDrop = { let mut x = FakeNeedsDrop; x = FakeNeedsDrop; x };
   |                                ^^^^^                  - value is dropped here
   |                                |
   |                                the destructor for this type cannot be evaluated in constants

error[E0493]: destructor of `FakeNeedsDrop` cannot be evaluated at compile-time
  --> $DIR/const_let.rs:20:33
   |
LL | const Y2: FakeNeedsDrop = { let mut x; x = FakeNeedsDrop; x = FakeNeedsDrop; x };
   |                                 ^^^^^                     - value is dropped here
   |                                 |
   |                                 the destructor for this type cannot be evaluated in constants

error[E0493]: destructor of `Option<FakeNeedsDrop>` cannot be evaluated at compile-time
  --> $DIR/const_let.rs:24:21
   |
LL | const Z: () = { let mut x = None; x = Some(FakeNeedsDrop); };
   |                     ^^^^^                                  - value is dropped here
   |                     |
   |                     the destructor for this type cannot be evaluated in constants

error[E0493]: destructor of `Option<FakeNeedsDrop>` cannot be evaluated at compile-time
  --> $DIR/const_let.rs:28:22
   |
LL | const Z2: () = { let mut x; x = None; x = Some(FakeNeedsDrop); };
   |                      ^^^^^                                     - value is dropped here
   |                      |
   |                      the destructor for this type cannot be evaluated in constants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0493`.
